[gd_scene load_steps=8 format=2]

[ext_resource path="res://environment/script/Environment.gd" type="Script" id=1]
[ext_resource path="res://environment/scene/decor/Decor.tscn" type="PackedScene" id=2]
[ext_resource path="res://player/scene/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://environment/script/EnemyTimer.gd" type="Script" id=4]
[ext_resource path="res://ui/scene/GameUI.tscn" type="PackedScene" id=5]
[ext_resource path="res://ui/font/bahnschrift.ttf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=1]
size = 100
font_data = ExtResource( 6 )

[node name="Environment" type="Node2D"]
script = ExtResource( 1 )

[node name="GameTimer" type="Timer" parent="."]
wait_time = 45.0
one_shot = true
autostart = true

[node name="Decor" parent="." instance=ExtResource( 2 )]

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, 180 )

[node name="EnemyLoader" type="Timer" parent="."]
autostart = true
script = ExtResource( 4 )
_wait_time = 1.0

[node name="GameUI" parent="." instance=ExtResource( 5 )]
margin_right = 640.0
margin_bottom = 45.0

[node name="RestorePlayer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="GameOverDelay" type="Timer" parent="."]
one_shot = true

[node name="BossPosition" type="Position2D" parent="."]
position = Vector2( 730, 180 )

[node name="GameOverLabel" type="Label" parent="."]
margin_right = 640.0
margin_bottom = 360.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.258824, 0.6, 0.968627, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "game over"
align = 1
valign = 1
uppercase = true
[connection signal="timeout" from="GameTimer" to="." method="_on_GameTimer_timeout"]
[connection signal="destroy" from="Player" to="." method="_on_Player_destroy"]
[connection signal="timeout" from="EnemyLoader" to="." method="_on_EnemyLoader_timeout"]
[connection signal="timeout" from="RestorePlayer" to="." method="_on_RestorePlayer_timeout"]
[connection signal="timeout" from="GameOverDelay" to="." method="_on_GameOverDelay_timeout"]
